@@ -1,0 +1,6 @@
+<?php
+$extpath = t3lib_extMgm::extPath('tc_beuser');
+return array(
+   'tx_tcbeuser_compatibility' => $extpath . 'class.tx_tcbeuser_compatibility.php'
+);
+?>
